dependencias y carpetas creadas

--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/GuillermoBarboza/twitter_clone/issues"
   },
-  "homepage": "https://github.com/GuillermoBarboza/twitter_clone#readme"
+  "homepage": "https://github.com/GuillermoBarboza/twitter_clone#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "faker": "^5.1.0",
+    "formidable": "^1.2.2",
+    "mongoose": "^5.10.9",
+    "passport": "^0.4.1"
+  }
 }
