--- a/views/vercel.json
+++ b/views/vercel.json
@@ -2,15 +2,12 @@
     "versions": 2,
     "builds": [
         { "src": "server.js", "use": "@now/node-server" },
-        { "src": "/public/**/*", "use": "@now/static" },
+        { "src": "/public/**/*", "use": "@now/static" }
     ],
     "routes": [
-        {
-            "src": "/css/(.*)",
-            "dest": "/public/css/$1"
-        },
         {
             "src": "/(.*)",
             "dest": "/server.js"
         }
+    ]
 }
