--- a/views/vercel.json
+++ b/views/vercel.json
@@ -1,13 +1,13 @@
 {
     "versions": 2,
     "builds": [
-        { "src": "/server.js", "use": "@now/node-server" },
+        { "src": "server.js", "use": "@now/node-server" },
         { "src": "/public/**/*", "use": "@now/static" }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/server.js"
+            "dest": "server.js"
         }
     ]
 }
