--- a/views/vercel.json
+++ b/views/vercel.json
@@ -1,8 +1,8 @@
 {
     "versions": 2,
     "builds": [
-        { "src": "server.js", "use": "@now/node-server" },
-        { "src": "/public/**/*", "use": "@now/static" }
+        { "src": "server.js", "use": "@vercel/node" },
+        { "src": "/public/**/*", "use": "@vercel/static" }
     ],
     "routes": [
         {
