--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formidable": "^1.2.2",
     "mongoose": "^5.10.9",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "vercel": "^20.1.2"
   }
 }
