--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "express-session": "^1.17.1",
     "faker": "^5.1.0",
     "formidable": "^1.2.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "vercel": "^20.1.2"
   }
 }
